update run through tutorial and add proper warnings when poor matches are found

--- a/example_data/Run through tutorial - matching_audio_to_video.ipynb
+++ b/example_data/Run through tutorial - matching_audio_to_video.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "import sys \n",
-    "sys.path.append('../') # include the modules in the outer folder in the search path\n",
+    "sys.path.append('../bin/') # include the modules in the outer folder in the search path\n",
     "import pandas as pd\n",
     "import numpy as np \n",
     "import matplotlib.pyplot as plt\n",
@@ -37,15 +37,12 @@
        " 'Run through tutorial - matching_audio_to_video.ipynb',\n",
        " 'audio',\n",
        " '.ipynb_checkpoints',\n",
-       " '.~lock.eg_annotations.csv#',\n",
+       " 'matching_sync_1.WAV',\n",
+       " 'matching_sync_0.WAV',\n",
        " 'videosync_DVRecorder_03_20190704_16.49.45-16.56.42[R][@da37][0].avi_.csv',\n",
-       " 'vlc-record_03_20190704_16-51-30to16-52[R][@da37][0].avi',\n",
-       " 'highres_recordings',\n",
        " 'get_videodata.py',\n",
        " 'common_fps_video_sync202.csv',\n",
-       " '.~lock.common_fps_video_sync111.csv#',\n",
-       " 'eg_annotations.csv',\n",
-       " 'video']"
+       " 'eg_annotations.csv']"
       ]
      },
      "execution_count": 2,
@@ -580,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +660,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:04<00:00,  4.98s/it]\n"
+      "/home/tbeleyur/anaconda2/envs/horseshoebat/lib/python2.7/site-packages/scipy/signal/signaltools.py:491: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return x[reverse].conj()\n",
+      "100%|██████████| 1/1 [00:03<00:00,  3.37s/it]\n"
      ]
     },
     {
@@ -673,9 +672,21 @@
       "Best doublechunk segment is:to45sec_non_spikey_T2019-07-04_16-51-30_0000007.wav_0^to45sec_non_spikey_T2019-07-04_16-51-30_0000007.wav_1\n",
       "\n",
       " Starting refined search within best doublechunk segment...\n",
-      "Done with refined search - best matching audio returned\n",
-      "('correlation coefficient is: ', array([[ 1.        , -0.13324243],\n",
-      "       [-0.13324243,  1.        ]]))\n",
+      "Done with refined search - best matching audio returned\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "../bin/audio_for_videoannotation.py:158: UserWarning: The AV sync may not be very great - please check again. The value was :-0.13324243408140551\n",
+      "  warnings.warn(warning_msg, stacklevel=1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "./common_fps_video_sync555.csv\n",
       "('video_fps obtained is :', 25)\n",
       "videosync_size\n",
@@ -703,7 +714,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:03<00:00,  3.46s/it]\n"
+      "100%|██████████| 1/1 [00:02<00:00,  2.66s/it]\n"
      ]
     },
     {
@@ -713,9 +724,7 @@
       "Best doublechunk segment is:to45sec_non_spikey_T2019-07-04_16-51-30_0000007.wav_0^to45sec_non_spikey_T2019-07-04_16-51-30_0000007.wav_1\n",
       "\n",
       " Starting refined search within best doublechunk segment...\n",
-      "Done with refined search - best matching audio returned\n",
-      "('correlation coefficient is: ', array([[1.        , 0.85273393],\n",
-      "       [0.85273393, 1.        ]]))\n"
+      "Done with refined search - best matching audio returned\n"
      ]
     }
    ],
@@ -733,11 +742,10 @@
     "for somenumber, each_commonfps in enumerate(sorted(all_commonfps)):\n",
     "    print(each_commonfps)\n",
     "    video_sync = pd.read_csv(each_commonfps)\n",
-    "    best_audio = match_video_sync_to_audio(video_sync, audio_folder, audio_fileformat='*.wav',\n",
+    "    best_audio, crosscoef = match_video_sync_to_audio(video_sync, audio_folder, audio_fileformat='*.wav',\n",
     "                                           audio_sync_spikey=False)\n",
     "                                                                 \n",
-    "    sf.write('./matching_sync_'+str(somenumber)+'.WAV', best_audio,fs)\n",
-    "    print('correlation coefficient is: ', np.corrcoef(best_audio[:,-1],best_audio[:,-2]))"
+    "    sf.write('./matching_sync_'+str(somenumber)+'.WAV', best_audio,fs)"
    ]
   },
   {
