add wavfile saving to notebooks and add some docs to audio_for_video

--- a/example_data/Run through tutorial - matching_audio_to_video.ipynb
+++ b/example_data/Run through tutorial - matching_audio_to_video.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,31 @@
     "sys.path.append('../bin/') # include the modules in the outer folder in the search path\n",
     "import matplotlib.pyplot as plt \n",
     "import pandas as pd\n",
-    "import numpy as np \n"
+    "import numpy as np \n",
+    "import datetime as dt\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2019-08-29 17:00:52'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2188,6 +2207,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_match_report(all_match_cc, all_files):\n",
+    "    df = pd.DataFrame(data={'file_name':all_files, 'match_cc':all_match_cc})\n",
+    "    now = dt.datetime.now().strftime('%Y-%m-%d %H:%M:%S')\n",
+    "    df.to_csv('AV-match-report_'+now+'.csv')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -2202,13 +2234,20 @@
     "audio_folder = 'audio/' # the current folder\n",
     "fs = 500000\n",
     "# generate the \n",
+    "all_ccs = []\n",
     "for somenumber, each_commonfps in enumerate(sorted(all_commonfps)):\n",
     "    print(each_commonfps)\n",
     "    video_sync = pd.read_csv(each_commonfps)\n",
-    "    best_audio, crosscoef = match_video_sync_to_audio(video_sync, audio_folder, audio_fileformat='*.wav',\n",
+    "    best_audio, syncblock_audio, crosscoef = match_video_sync_to_audio(video_sync, audio_folder, audio_fileformat='*.wav',\n",
     "                                           audio_sync_spikey=False)\n",
+    "    all_ccs.append(crosscoef)\n",
     "                                                                 \n",
-    "    sf.write('./matching_sync_'+str(somenumber)+'.WAV', best_audio,fs)"
+    "    try:\n",
+    "        sf.write('./matching_sync_'+str(somenumber)+'.WAV', best_audio,fs)\n",
+    "    except:\n",
+    "        print('Could not save ', each_commonfps)\n",
+    "\n",
+    "write_match_report(all_ccs, sorted(all_commonfps))\n"
    ]
   },
   {
