add folder specific saving in example notebook

--- a/example_data/Run through tutorial - matching_audio_to_video.ipynb
+++ b/example_data/Run through tutorial - matching_audio_to_video.ipynb
@@ -2232,7 +2232,9 @@
     "#all_commonfps = glob.glob('common_fps_video_sync*') # get all the relevant common_fps_sync files\n",
     "all_commonfps = glob.glob('./common_fps*')\n",
     "audio_folder = 'audio/' # the current folder\n",
-    "fs = 500000\n",
+    "audiosync_folder = 'sync_audio/'\n",
+    "audioannotation_folder = 'annotation_audio/'\n",
+    "fs = 250000 # change according to the recording sampling rate!! \n",
     "# generate the \n",
     "all_ccs = []\n",
     "for somenumber, each_commonfps in enumerate(sorted(all_commonfps)):\n",
@@ -2243,7 +2245,8 @@
     "    all_ccs.append(crosscoef)\n",
     "                                                                 \n",
     "    try:\n",
-    "        sf.write('./matching_sync_'+str(somenumber)+'.WAV', best_audio,fs)\n",
+    "        sf.write(audiosync_folder+'matching_sync_'+str(somenumber)+'.WAV', syncblock_audio,fs)\n",
+    "        sf.write(audioannotation_folder+'matching_annotaudio_'+str(somenumber)+'.WAV', best_audio,fs)\n",
     "    except:\n",
     "        print('Could not save ', each_commonfps)\n",
     "\n",
