add new requirements.txt to try out cross-platform installations. Audio sync works reliably in this version (woohoo)

--- a/User Manual - get matching audio.ipynb
+++ b/User Manual - get matching audio.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Low-cost audio-video synchronisation :\n",
+    "###  Low-cost audio-video synchronisation: no need for fancy equipment anymore!\n",
     "Many experiments/recording situations require the use of audio and video devices that cannot directly interface with e ach other - and may also include the use of custom equipment. This is where a specific audio-video sync protocol is required. One of the ways includes the [SMPTE timestamps](https://en.wikipedia.org/wiki/SMPTE_timecode) with a special device. However, recently [Laurijssen et al. 2017](https://jeb.biologists.org/content/221/4/jeb173724.abstract) published their low-cost methodology which relies on a simple and common ON/OFF signal passed to a light source and the audio device. The ON/OFF signal of the light source on the video is matched to the audio. \n",
     "\n",
     "### What this package does:\n",
@@ -53,7 +53,8 @@
    "metadata": {},
    "source": [
     "<a id='video_input'></a>\n",
-    "* #### Video Files : Each frame of the video file must have a timestamp and blinking light visible for best results. The position of the timestamp and blinking light should not move within a single video file. \n",
+    "* ### 1.Video Files :\n",
+    "Each frame of the video file must have a timestamp and blinking light visible for best results. The position of the timestamp and blinking light should not move within a single video file. \n",
     "\n",
     "\n",
     "![](img/eg_video_frame.jpg)\n",
@@ -65,7 +66,8 @@
    "metadata": {},
    "source": [
     "<a id='audio_input'></a>\n",
-    "* #### Audio File/s : Audio files must be in a commonly used format (wav, flac,etc) and one of these channels must be solely dedicated to recording the audio sync signal. Since not all soundcards can handle DC signals - like those in an ON/OFF signal to drive a light - even capacitor gated signals can be handled by this package. In capacitor gated signals - a positive spike appears when the light goes on and a negative spike appears when the light goes off.\n",
+    "* ### 2. Audio File/s:\n",
+    "Audio files must be in a commonly used format (wav, flac,etc) and one of these channels must be solely dedicated to recording the audio sync signal. Since not all soundcards can handle DC signals - like those in an ON/OFF signal to drive a light - even capacitor gated signals can be handled by this package. In capacitor gated signals - a positive spike appears when the light goes on and a negative spike appears when the light goes off.\n",
     "\n",
     "![](img/capacitor_gated.PNG)\n",
     "Figure 2 : The upper channel is the capacitor gated audio and the lower channel is the blinking lights' normalised intensity. \n"
@@ -76,7 +78,8 @@
    "metadata": {},
    "source": [
     "<a id='annotation_input'></a>\n",
-    "* #### User annotations : the user annotations are expected to have a start and end with the timestamps corresponding to the video frames in the file. Unless the video fps is 1 Hz, there will be multiple frames with the same timestamps, and thus the start_framenumber and the end_framenumber must also be specified. The user annotations must be a .csv file in the format shown below. The csv file may have even more columns - but these will not be accessed by the package.\n",
+    "* ### 3. Video annotations of relevant portions:\n",
+    "The user annotations are expected to have a start and end with the timestamps corresponding to the video frames in the file. Unless the video fps is 1 Hz, there will be multiple frames with the same timestamps, and thus the start_framenumber and the end_framenumber must also be specified. The user annotations must be a .csv file in the format shown below. The csv file may have even more columns - but these will not be accessed by the package.\n",
     "![](img/eg_csv_file.PNG)\n",
     "Figure 3 : An example annotation csv file"
    ]
