audio matching for 2150-2300 2018-08-16 and also add optional AND/OR switch to read timestamp and/or lamp intensity

--- a/experimental_testdata/horseshoebat_data/whole_data_analysis/Matching annotations to audio 2018-08-17 1-2am.ipynb
+++ b/experimental_testdata/horseshoebat_data/whole_data_analysis/Matching annotations to audio 2018-08-17 1-2am.ipynb
@@ -93779,9 +93779,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:horseshoebat] *",
+   "display_name": "horseshoebat",
    "language": "python",
-   "name": "conda-env-horseshoebat-py"
+   "name": "horseshoebat"
   },
   "language_info": {
    "codemirror_mode": {
